--- a/VKAnalyzer/Web.config
+++ b/VKAnalyzer/Web.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   <configSections>
-    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
+  </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=WIN-Q2876F7QN1E\SQLEXPRESS;Initial Catalog=VKSMM;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
@@ -65,4 +65,14 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <targets>
+      <target name="CommonLogger" xsi:type="File" fileName="Logs/Common/${shortdate} WebLog.txt"/>
+      <target name="ErrorLogger" xsi:type="File" fileName="Logs/Errors/${shortdate} Errors.txt"/>
+    </targets>
+    <rules>
+      <logger name="VKAnalyzer.*" minlevel="Debug" writeTo="CommonLogger" />
+      <logger name="VKAnalyzer.*" minlevel="Error" writeTo="ErrorLogger" />
+    </rules>
+  </nlog>
 </configuration>
