--- a/VKAnalyzer/packages.config
+++ b/VKAnalyzer/packages.config
@@ -25,6 +25,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
+  <package id="NLog" version="4.4.5" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Owin.Security.Providers.VKontakte" version="2.13.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
