Datepicker UI was added a lot of internal packages were updated Cohort analysator was moved to the BL

--- a/VKAnalyzer.BusinessLogic/VKAnalyzer.BusinessLogic.csproj
+++ b/VKAnalyzer.BusinessLogic/VKAnalyzer.BusinessLogic.csproj
@@ -40,6 +40,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="CohortAnalyser\CohortAnalyser.cs" />
+    <Compile Include="CohortAnalyser\Models\CohortAnalysisModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
