--- a/VKAnalyzer.BusinessLogic/VKAnalyzer.BusinessLogic.csproj
+++ b/VKAnalyzer.BusinessLogic/VKAnalyzer.BusinessLogic.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Class1.cs" />
     <Compile Include="CohortAnalyser\CohortAnalyser.cs" />
     <Compile Include="CohortAnalyser\Models\CohortAnalysisModel.cs" />
+    <Compile Include="Extensions\AnalyserExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
