--- a/VKAnalyzer.BusinessLogic/VKAnalyzer.BusinessLogic.csproj
+++ b/VKAnalyzer.BusinessLogic/VKAnalyzer.BusinessLogic.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NLog.4.4.5\lib\net45\NLog.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -39,13 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="CohortAnalyser\Models\CohortAnalysisResultModel.cs" />
+    <Compile Include="VK\Models\PostDataModel.cs" />
     <Compile Include="CohortAnalyser\AnalyseStep.cs" />
     <Compile Include="CohortAnalyser\CohortAnalyser.cs" />
     <Compile Include="CohortAnalyser\Models\CohortAnalysisModel.cs" />
     <Compile Include="CohortAnalyser\Models\GetWallPostsParametersModel.cs" />
     <Compile Include="Extensions\AnalyserExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
