--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\VKAnalyzer.BusinessLogic\packages.config" />
+  <repository path="..\VKAnalyzer.DataAccess\packages.config" />
   <repository path="..\VKAnalyzer.Tests\packages.config" />
   <repository path="..\VKAnalyzer\packages.config" />
 </repositories>
