--- a/VKAnalyzer/VKAnalyzer.csproj
+++ b/VKAnalyzer/VKAnalyzer.csproj
@@ -52,6 +52,14 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Hangfire.Core, Version=1.6.14.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Hangfire.Core.1.6.14\lib\net45\Hangfire.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Hangfire.SqlServer, Version=1.6.14.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Hangfire.SqlServer.1.6.14\lib\net45\Hangfire.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
       <Private>True</Private>
@@ -192,7 +200,9 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\EFModels\AccessTokenUserModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\VKModels\AnalyseResultsViewModel.cs" />
     <Compile Include="Models\VKModels\CohortAnalysysInputModel.cs" />
+    <Compile Include="Models\VKModels\VKCohortAnalyseResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\VkAuthService.cs" />
     <Compile Include="Services\VkService.cs" />
@@ -307,6 +317,8 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Vk\CohortAnalysis.cshtml" />
     <Content Include="Views\Vk\Index.cshtml" />
+    <Content Include="Views\Vk\ListOfResults.cshtml" />
+    <Content Include="Views\Vk\Result.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
