--- a/VKAnalyzer/packages.config
+++ b/VKAnalyzer/packages.config
@@ -3,6 +3,9 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="bootstrap" version="3.3.7" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="HangFire" version="1.6.14" targetFramework="net451" />
+  <package id="Hangfire.Core" version="1.6.14" targetFramework="net451" />
+  <package id="Hangfire.SqlServer" version="1.6.14" targetFramework="net451" />
   <package id="jQuery" version="3.1.1" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net45" />
