--- a/VKAnalyzer/VKAnalyzer.csproj
+++ b/VKAnalyzer/VKAnalyzer.csproj
@@ -204,21 +204,29 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\VKModels\AnalyseResultsViewModel.cs" />
     <Compile Include="Models\VKModels\CohortAnalysysInputModel.cs" />
+    <Compile Include="Models\VKModels\JsonModels\Ads.cs" />
     <Compile Include="Models\VKModels\ListOfResults.cs" />
     <Compile Include="Models\VKModels\Memas\MemasAnalyzeResultModel.cs" />
     <Compile Include="Models\VKModels\VkAnalyseSalesModel.cs" />
+    <Compile Include="Models\VKModels\VkAnalyseSalesResultModel.cs" />
     <Compile Include="Models\VKModels\VKCohortAnalyseResult.cs" />
     <Compile Include="Models\VKModels\VkMemasAnalyzeResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\VK\VkAdsRequestService.cs" />
     <Compile Include="Services\VK\VkAuthService.cs" />
+    <Compile Include="Services\VK\VkBaseService.cs" />
     <Compile Include="Services\VK\VkDatabaseService.cs" />
     <Compile Include="Services\VK\VkMemasService.cs" />
     <Compile Include="Services\VK\VkRequestService.cs" />
+    <Compile Include="Services\VK\VkSalesAnalysisService.cs" />
     <Compile Include="Services\VK\VkService.cs" />
     <Compile Include="Services\VK\VkXMLService.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\1.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -333,6 +341,7 @@
     <Content Include="Views\Vk\CohortAnalyseOfSales\Index.cshtml" />
     <Content Include="Views\Vk\Memas\Index.cshtml" />
     <Content Include="Views\Vk\Memas\Result.cshtml" />
+    <Content Include="Views\Vk\CohortAnalyseOfSales\AnalyseInProgress.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
