--- a/VKAnalyzer/VKAnalyzer.csproj
+++ b/VKAnalyzer/VKAnalyzer.csproj
@@ -208,7 +208,6 @@
     <Compile Include="Models\VKModels\ListOfResults.cs" />
     <Compile Include="Models\VKModels\Memas\MemasAnalyzeResultModel.cs" />
     <Compile Include="Models\VKModels\VkAnalyseSalesModel.cs" />
-    <Compile Include="Models\VKModels\VkAnalyseSalesResultModel.cs" />
     <Compile Include="Models\VKModels\VKCohortAnalyseResult.cs" />
     <Compile Include="Models\VKModels\VkMemasAnalyzeResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -342,6 +341,7 @@
     <Content Include="Views\Vk\Memas\Index.cshtml" />
     <Content Include="Views\Vk\Memas\Result.cshtml" />
     <Content Include="Views\Vk\CohortAnalyseOfSales\AnalyseInProgress.cshtml" />
+    <Content Include="Views\Vk\CohortAnalyseOfSales\Result.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
