--- a/VKAnalyzer/packages.config
+++ b/VKAnalyzer/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
+  <package id="Autofac" version="4.6.2" targetFramework="net451" />
+  <package id="Autofac.Configuration" version="4.0.1" targetFramework="net451" />
+  <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net451" />
   <package id="bootstrap" version="3.3.7" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="HangFire" version="1.6.14" targetFramework="net451" />
@@ -16,6 +19,9 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.Extensions.Configuration" version="1.0.0" targetFramework="net451" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="1.0.0" targetFramework="net451" />
+  <package id="Microsoft.Extensions.Primitives" version="1.0.0" targetFramework="net451" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Owin" version="3.1.0" targetFramework="net451" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net451" />
@@ -33,5 +39,14 @@
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Owin.Security.Providers.VKontakte" version="2.14.0" targetFramework="net45" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
+  <package id="System.Collections" version="4.0.11" targetFramework="net451" />
+  <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net451" />
+  <package id="System.IO" version="4.1.0" targetFramework="net451" />
+  <package id="System.Linq" version="4.1.0" targetFramework="net451" />
+  <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="net451" />
+  <package id="System.Runtime" version="4.1.0" targetFramework="net451" />
+  <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net451" />
+  <package id="System.Runtime.InteropServices" version="4.1.0" targetFramework="net451" />
+  <package id="System.Threading" version="4.0.11" targetFramework="net451" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
