--- a/VKAnalyzer/VKAnalyzer.csproj
+++ b/VKAnalyzer/VKAnalyzer.csproj
@@ -64,6 +64,10 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Hangfire.Autofac, Version=2.3.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Hangfire.Autofac.2.3.1\lib\net45\Hangfire.Autofac.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Hangfire.Core, Version=1.6.14.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Hangfire.Core.1.6.14\lib\net45\Hangfire.Core.dll</HintPath>
       <Private>True</Private>
@@ -250,6 +254,7 @@
     <Compile Include="Services\Interfaces\IVkDatabaseService.cs" />
     <Compile Include="Services\Interfaces\IVkService.cs" />
     <Compile Include="Services\VK\AffinityIndexService.cs" />
+    <Compile Include="Services\VK\VkUrlService.cs" />
     <Compile Include="Services\VK\VkAdsRequestService.cs" />
     <Compile Include="Services\VK\VkAuthService.cs" />
     <Compile Include="Services\VK\VkBaseService.cs" />
