--- a/VKAnalyzer/packages.config
+++ b/VKAnalyzer/packages.config
@@ -7,6 +7,7 @@
   <package id="bootstrap" version="3.3.7" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="HangFire" version="1.6.14" targetFramework="net451" />
+  <package id="Hangfire.Autofac" version="2.3.1" targetFramework="net451" />
   <package id="Hangfire.Core" version="1.6.14" targetFramework="net451" />
   <package id="Hangfire.SqlServer" version="1.6.14" targetFramework="net451" />
   <package id="jQuery" version="3.1.1" targetFramework="net45" />
