--- a/VKAnalyzer/VKAnalyzer.csproj
+++ b/VKAnalyzer/VKAnalyzer.csproj
@@ -239,9 +239,10 @@
     <Compile Include="Models\EFModels\AccessTokenUserModel.cs" />
     <Compile Include="Models\EFModels\Groups.cs" />
     <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Models\VKModels\AffinityIndexResult.cs" />
+    <Compile Include="Models\VKModels\AffinityIndex\AffinityIndexResult.cs" />
     <Compile Include="Models\VKModels\AffinityIndex\AffinityIndexOptionsModel.cs" />
-    <Compile Include="Models\VKModels\AffinityIndex\VKCohortAnalyseResult.cs" />
+    <Compile Include="Models\VKModels\AffinityIndex\AffinityIndexResultsViewModel.cs" />
+    <Compile Include="Models\VKModels\AffinityIndex\VkAffinityIndexResults.cs" />
     <Compile Include="Models\VKModels\AnalyseResultsViewModel.cs" />
     <Compile Include="Models\VKModels\CohortAnalysysInputModel.cs" />
     <Compile Include="Models\VKModels\JsonModels\Ads.cs" />
@@ -392,6 +393,8 @@
     <Content Include="Views\CohortAnalysis\Index.cshtml" />
     <Content Include="Views\CohortAnalysis\Result.cshtml" />
     <Content Include="Views\AffinityIndex\Index.cshtml" />
+    <Content Include="Views\AffinityIndex\Results.cshtml" />
+    <Content Include="Views\AffinityIndex\Result.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
