--- a/VKAnalyzer/VKAnalyzer.csproj
+++ b/VKAnalyzer/VKAnalyzer.csproj
@@ -252,22 +252,18 @@
     <Compile Include="Models\VKModels\VKCohortAnalyseResult.cs" />
     <Compile Include="Models\VKModels\VkMemasAnalyzeResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\Interfaces\IAffinityIndexService.cs" />
-    <Compile Include="Services\Interfaces\IVkBaseService.cs" />
-    <Compile Include="Services\Interfaces\IVkDatabaseService.cs" />
-    <Compile Include="Services\Interfaces\IVkService.cs" />
     <Compile Include="Services\VK\AffinityIndexService.cs" />
-    <Compile Include="Services\VK\VkUrlService.cs" />
-    <Compile Include="Services\VK\VkAdsRequestService.cs" />
+    <Compile Include="Services\VK\Common\VkUrlService.cs" />
+    <Compile Include="Services\VK\Common\VkAdsRequestService.cs" />
     <Compile Include="Services\VK\VkAuthService.cs" />
-    <Compile Include="Services\VK\VkBaseService.cs" />
-    <Compile Include="Services\VK\VkDatabaseService.cs" />
-    <Compile Include="Services\VK\VkDbService.cs" />
+    <Compile Include="Services\VK\Common\VkBaseService.cs" />
+    <Compile Include="Services\VK\Common\VkDatabaseService.cs" />
+    <Compile Include="Services\VK\Common\VkDbService.cs" />
     <Compile Include="Services\VK\VkMemasService.cs" />
-    <Compile Include="Services\VK\VkRequestService.cs" />
-    <Compile Include="Services\VK\VkSalesAnalysisService.cs" />
-    <Compile Include="Services\VK\VkService.cs" />
-    <Compile Include="Services\VK\VkXMLService.cs" />
+    <Compile Include="Services\VK\Common\VkRequestService.cs" />
+    <Compile Include="Services\VK\CohortAndSale\VkSalesAnalysisService.cs" />
+    <Compile Include="Services\VK\CohortAndSale\VkService.cs" />
+    <Compile Include="Services\VK\Common\VkXMLService.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Utils\AutofacConfig.cs" />
   </ItemGroup>
