--- a/VKAnalyzer/Web.config
+++ b/VKAnalyzer/Web.config
@@ -16,6 +16,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="VkApiBaseUrl" value="https://api.vk.com/api.php?oauth=1" />
+    <add key="VkApiActualVersion" value="v=5.73"/>
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
