--- a/VKAnalyzer/VKAnalyzer.csproj
+++ b/VKAnalyzer/VKAnalyzer.csproj
@@ -401,6 +401,7 @@
     <Content Include="Views\AffinityIndex\Result.cshtml" />
     <Content Include="Views\SalesAnalysis\Results.cshtml" />
     <Content Include="Views\CohortAnalysis\Results.cshtml" />
+    <Content Include="Views\SalesAnalysis\ResultWithList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
