--- a/VKAnalyzer/VKAnalyzer.csproj
+++ b/VKAnalyzer/VKAnalyzer.csproj
@@ -254,9 +254,11 @@
     <Compile Include="Models\VKModels\VkMemasAnalyzeResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\VK\AffinityIndexService.cs" />
+    <Compile Include="Services\VK\CohortAndSale\VkCohortAnalyseService.cs" />
     <Compile Include="Services\VK\Common\VkApiExecuteService.cs" />
     <Compile Include="Services\VK\Common\VkUrlService.cs" />
     <Compile Include="Services\VK\Common\VkAdsRequestService.cs" />
+    <Compile Include="Services\VK\Common\VkWallRequestService.cs" />
     <Compile Include="Services\VK\VkAuthService.cs" />
     <Compile Include="Services\VK\Common\VkBaseService.cs" />
     <Compile Include="Services\VK\Common\VkDatabaseService.cs" />
